Bug 130541 - Crash after changing text type property of a text box control
Summary: Crash after changing text type property of a text box control
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.0.0
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2020-02-09 14:38 UTC by Maxim Monastirsky
Modified: 2020-02-11 12:41 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
bt with debug symbols (9.90 KB, text/plain)
2020-02-10 10:27 UTC, Julien Nabet
Details
Valgrind trace (7.88 KB, application/x-bzip)
2020-02-10 11:52 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Maxim Monastirsky 2020-02-09 14:38:29 UTC
Steps to reproduce:

1. Open Writer.
2. From the menu choose Form > Text Box, and draw the text box control.
3. Right click on the text box > Control Properties...
4. Switch to the General tab.
5. Find the "Text type" property, and change it to "Multi-line with formatting".
6. Close the properties floating window => crash.
Comment 1 sdc.blanco 2020-02-09 15:04:51 UTC
repro with:

Version: 7.0.0.0.alpha0+ (x64)
Build ID: dfd027342e6b4107ebd3369de96ef2be3883724d
CPU threads: 8; OS: Windows 10.0 Build 18363; UI render: GL; VCL: win; 
Locale: en-US (en_DK); UI-Language: en-US
Calc: CL

No repro with 6.3.4.2
Comment 2 Julien Nabet 2020-02-10 10:27:16 UTC
Created attachment 157767 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 3 Julien Nabet 2020-02-10 10:29:58 UTC
On pc Debian x86-64 with LO Debian package 6.4.0.3, I don't reproduce this.
Comment 4 Julien Nabet 2020-02-10 11:52:35 UTC
Created attachment 157769 [details]
Valgrind trace

Valgrind retrieved on pc Debian x86-64 with master sources updated some days ago.
Comment 5 Xisco Faulí 2020-02-10 12:15:11 UTC
I can't reproduce it in

Versión: 6.4.0.3 (x86)
Id. de compilación: b0a288ab3d2d4774cb44b62f04d5d28733ac6df8
Subprocs. CPU: 2; SO: Windows 6.1 Service Pack 1 Build 7601; Repres. IU: predet.; VCL: win; 
Configuración regional: es-ES (es_ES); Idioma de IU: es-ES
Calc: threaded
Comment 6 raal 2020-02-10 12:45:44 UTC
This seems to have begun at the below commit.
Adding Cc: to Caolán McNamara; Could you possibly take a look at this one? Thanks
 f7cdd32887fa614c27fc4ee36e977bc85d0d268f is the first bad commit
commit f7cdd32887fa614c27fc4ee36e977bc85d0d268f
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Mon Dec 9 04:57:38 2019 -0800

    source 1efeb17837c22499f00299c033ae59ba3910f7d7

author	Caolán McNamara <caolanm@redhat.com>	2019-11-04 13:06:04 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2019-12-09 13:28:35 +0100
commit 1efeb17837c22499f00299c033ae59ba3910f7d7 (patch)
tree a8db0b758e942b3b14fba26129dc51a95ff5c10c
parent 4da3e0a0e5b2260c26186890724978bfd00f796c (diff)
weld Property Browser
Comment 7 Commit Notification 2020-02-10 19:17:46 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1191a45699ba22445388ceeb834d7b1b3e77dde3

Resolves: tdf#130541 null-deref on detaching already-detached page

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Xisco Faulí 2020-02-11 12:41:13 UTC
Verified in

Version: 7.0.0.0.alpha0+
Build ID: 5d00a1c9c6e85f3d7a3e05ab485da79980c38d44
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!