Resolves: tdf#130541 null-deref on detaching already-detached page

Change-Id: Ib48ab91232b8ff624a1387ab82701938eef58ded
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/88380
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>